# base64

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: base64.cpp  base64.h
tests/: tests.cpp  tests_utils.h
